--- a/css1.css
+++ b/css1.css
@@ -2,14 +2,88 @@ header{
 	color: #f9e8f9;
 	font-family: "Arial Black", Gadget, sans-serif;
 	font-size: 72px;
-	background-image: url("header-back.jpg");
+	background-color:#56a9d8;
+    padding: 0px 0px;
 }
 
 header:hover{
 	color: white;
-	background-color: black;
 }
 
 body{
 	background="background.jpg";
+}
+
+.header a {
+  float: left;
+  color: #51184e;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+  font-family: "Arial Black", Gadget, sans-serif;
+}
+
+ .header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #FDBA70;
+  color: #F4F479;
+}
+
+.header a.active {
+  background-color:#F4F479;
+  color: #FD595C;
+}
+
+.header-right {
+  float: right;
+  position: absolute;
+    right: 10px;
+    top: 100px;
+}
+
+ @media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+	font-family: "Arial Black", Gadget, sans-serif;
+  }
+  .header-right {
+    float: none;
+  }
+}
+
+.safkaboximg{
+	border-radius: 5px;
+	height: 400px;
+	position: relative;
+	top: 100px;
+}
+.order{
+	position: relative;
+	top: -150px;
+	right: -1200px;
+    width:220px;
+    height:40px;
+    text-align:center;
+    color:#FFFF6B;
+    text-decoration:none;
+    line-height:43px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-size: 24px;
+    display: block;
+    margin: 30px;
+	background-color: #D8A165;
+	
+}
+
+.order:hover{
+	font-weight: 600;
 }
