--- a/css2.css
+++ b/css2.css
@@ -1,12 +1,13 @@
 .header {
   overflow: hidden;
-  background-color: #f0dbff;
+  background-color:#86B0BF;
   padding: 20px 10px;
+	border-radius: 8px;
 }
 
 .header a {
   float: left;
-  color: #51184e;
+  color:#273130;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -19,17 +20,16 @@
  .header a.logo {
   font-size: 25px;
   font-weight: bold;
-  font-family: "Arial Black", Gadget, sans-serif;
 }
 
 .header a:hover {
-  background-color: #ddd;
-  color: #8e638c;
+  background-color:#A7C0FC;
+  color:#1F2257;
 }
 
 .header a.active {
-  background-color: #dd44e5;
-  color: white;
+  background-color:#1D2C53;
+  color:#A7C0FC;
 }
 
 .header-right {
@@ -46,4 +46,49 @@
   .header-right {
     float: none;
   }
+}
+
+.safkaboximg{
+	border-radius: 5px;
+	height: 400px;
+	position: relative;
+	top: 100px;
+}
+.order{
+	position: relative;
+	top: -150px;
+	right: -950px;
+    width:220px;
+    height:40px;
+    text-align:center;
+    color:#273130;
+    text-decoration:none;
+    line-height:43px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-size: 24px;
+    display: block;
+    margin: 30px;
+	background-color:#86B0BF;
+	
+}
+
+.order:hover{
+	font-weight: 600;
+}
+
+.desc{
+	position: relative;
+	top: -150px;
+	right: -900px;
+	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+}
+
+.price{
+	position: relative;
+	top: -420px;
+	right: -1066px;
+	font-size: 30px;
+	color:#628DBC;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	font-style: italic;
 }
