--- a/css1.css
+++ b/css1.css
@@ -15,6 +15,12 @@ body{
 	background="background.jpg";
 }
 
+.Map{
+	position: relative;
+    right: 10px;
+    top: 90px;
+}
+
 .header a {
   float: left;
   color: #51184e;
