--- a/css1.css
+++ b/css1.css
@@ -1,5 +1,5 @@
 header{
-	color: #f9e8f9;
+	color: #000000;
 	font-family: "Arial Black", Gadget, sans-serif;
 	font-size: 72px;
 	background-color:#56a9d8;
