--- a/css2.css
+++ b/css2.css
@@ -34,6 +34,9 @@
 
 .header-right {
   float: right;
+  position: relative;
+    right: 10px;
+    top: 90px;
 }
 
  @media screen and (max-width: 500px) {
